--- a/src/style/partials/main-menu/_main-menu.scss
+++ b/src/style/partials/main-menu/_main-menu.scss
@@ -17,8 +17,8 @@ img {
 	top: 10%;
 	right: 5%;
 	pointer-events: none;
+	animation: shake-with-delay 6s 3s 2;
 	.stretchy-nav-bg {
-		/* this is the stretching navigation background */
 		position: absolute;
 		z-index: 1;
 		top: 0;
@@ -49,69 +49,44 @@ img {
 	height: 60px;
 	width: 60px;
 	border-radius: 50%;
-	/* replace text with image */
 	overflow: hidden;
 	white-space: nowrap;
 	color: transparent;
 	pointer-events: auto;
+	transition: transform 1s linear;
 	span {
-		/* this is the hamburger icon */
 		position: absolute;
 		width: 16px;
 		height: 2px;
 		background-color: #ffffff;
 		&::after, &::before {
-			/* this is the hamburger icon */
 			position: absolute;
 			width: 16px;
 			height: 2px;
 			background-color: #ffffff;
 		}
-		/* middle line of the hamburger icon */
 		left: 50%;
 		top: 50%;
 		bottom: auto;
 		right: auto;
-		-webkit-transform: translateX(-50%) translateY(-50%);
-		-moz-transform: translateX(-50%) translateY(-50%);
-		-ms-transform: translateX(-50%) translateY(-50%);
-		-o-transform: translateX(-50%) translateY(-50%);
 		transform: translateX(-50%) translateY(-50%);
-		-webkit-transition: background-color 0.2s;
-		-moz-transition: background-color 0.2s;
 		transition: background-color 0.2s;
 		&::after {
-			/* top and bottom lines of the hamburger icon */
 			content: '';
 			top: 0;
 			left: 0;
-			-webkit-backface-visibility: hidden;
 			backface-visibility: hidden;
-			-webkit-transition: -webkit-transform 0.2s;
-			-moz-transition: -moz-transform 0.2s;
 			transition: transform 0.2s;
 		}
 		&::before {
-			/* top and bottom lines of the hamburger icon */
 			content: '';
 			top: 0;
 			left: 0;
-			-webkit-backface-visibility: hidden;
 			backface-visibility: hidden;
-			-webkit-transition: -webkit-transform 0.2s;
-			-moz-transition: -moz-transform 0.2s;
 			transition: transform 0.2s;
-			-webkit-transform: translateY(-6px);
-			-moz-transform: translateY(-6px);
-			-ms-transform: translateY(-6px);
-			-o-transform: translateY(-6px);
 			transform: translateY(-6px);
 		}
 		&::after {
-			-webkit-transform: translateY(6px);
-			-moz-transform: translateY(6px);
-			-ms-transform: translateY(6px);
-			-o-transform: translateY(6px);
 			transform: translateY(6px);
 		}
 	}
@@ -124,17 +99,9 @@ img {
 .nav-is-visible .cd-nav-trigger span {
 	background-color: transparent;
 	&::before {
-		-webkit-transform: rotate(-45deg);
-		-moz-transform: rotate(-45deg);
-		-ms-transform: rotate(-45deg);
-		-o-transform: rotate(-45deg);
 		transform: rotate(-45deg);
 	}
 	&::after {
-		-webkit-transform: rotate(45deg);
-		-moz-transform: rotate(45deg);
-		-ms-transform: rotate(45deg);
-		-o-transform: rotate(45deg);
 		transform: rotate(45deg);
 	}
 }
@@ -145,11 +112,9 @@ img {
 		z-index: 2;
 		padding: 60px 0 0;
 		visibility: hidden;
-		-webkit-transition: visibility 0.3s;
-		-moz-transition: visibility 0.3s;
 		transition: visibility 0.3s;
 		text-align: right;
-		 list-style-type: none;
+		list-style-type: none;
 		a {
 			text-decoration: none;
 			position: relative;
@@ -159,8 +124,6 @@ img {
 			padding: 0 calc(1em + 60px) 0 1em;
 			color: rgba(255, 255, 255, 0.8);
 			font-size: 18px;
-			-webkit-transition: color 0.2s;
-			-moz-transition: color 0.2s;
 			transition: color 0.2s;
 			@media screen and (max-width: 1200px) {
 				font-size: 16px;
@@ -170,40 +133,29 @@ img {
 				font-size: 14px;
 			}
 			&::after {
-				/* navigation item icons */
 				content: '';
 				position: absolute;
 				height: 32px;
 				width: 32px;
 				right: 12px;
 				top: 50%;
-				-webkit-transform: translateY(-50%) scale(0);
-				-moz-transform: translateY(-50%) scale(0);
-				-ms-transform: translateY(-50%) scale(0);
-				-o-transform: translateY(-50%) scale(0);
 				transform: translateY(-50%) scale(0);
 				opacity: .8;
 				background: url(../img/cd-sprite-1.svg) no-repeat 0 0;
 			}
 			&::before {
-				/* line visible next to the active navigation item */
 				content: '';
 				position: absolute;
 				width: 3px;
 				height: 50px !important;
 				top: 50%;
 				right: 60px;
-				-webkit-transform: translateX(3px) translateY(-50%) scaleY(0);
-				-moz-transform: translateX(3px) translateY(-50%) scaleY(0);
-				-ms-transform: translateX(3px) translateY(-50%) scaleY(0);
-				-o-transform: translateX(3px) translateY(-50%) scaleY(0);
 				transform: translateX(3px) translateY(-50%) scaleY(0);
 				background-color: #077665;
 			}
 		}
 		li {
 			&:first-of-type a::after {
-				/* change custom icon using image sprites */
 				background-position: 0px 0;
 			}
 			&:nth-of-type(2) a::after {
@@ -220,13 +172,8 @@ img {
 			}
 		}
 		span {
-			/* navigation item labels */
 			display: block;
 			opacity: 0;
-			-webkit-transform: translateX(-25px);
-			-moz-transform: translateX(-25px);
-			-ms-transform: translateX(-25px);
-			-o-transform: translateX(-25px);
 			transform: translateX(-25px);
 		}
 	}
@@ -234,33 +181,17 @@ img {
 		visibility: visible;
 		a {
 			&::after {
-				/* navigation item icons */
-				-webkit-transform: translateY(-50%) scale(1);
-				-moz-transform: translateY(-50%) scale(1);
-				-ms-transform: translateY(-50%) scale(1);
-				-o-transform: translateY(-50%) scale(1);
 				transform: translateY(-50%) scale(1);
-				-webkit-animation: scaleIn 0.15s backwards;
-				-moz-animation: scaleIn 0.15s backwards;
 				animation: scaleIn 0.15s backwards;
-				-webkit-transition: opacity 0.2s;
-				-moz-transition: opacity 0.2s;
 				transition: opacity 0.2s;
 			}
-			&.active { 
+			&.active {
 				color: rgba(255, 255, 255, 1);
-				// font-weight: bold;
 				&::after {
 					opacity: 1;
 				}
 				&::before {
-					-webkit-transform: translateX(3px) translateY(-50%) scaleY(1);
-					-moz-transform: translateX(3px) translateY(-50%) scaleY(1);
-					-ms-transform: translateX(3px) translateY(-50%) scaleY(1);
-					-o-transform: translateX(3px) translateY(-50%) scaleY(1);
 					transform: translateX(3px) translateY(-50%) scaleY(1);
-					-webkit-transition: -webkit-transform 0.15s 0.3s;
-					-moz-transition: -moz-transform 0.15s 0.3s;
 					transition: transform 0.15s 0.3s;
 				}
 			}
@@ -276,16 +207,8 @@ img {
 			padding: 0 15px;
 			margin: 5px 0;
 			opacity: 1;
-			-webkit-transform: translateX(0);
-			-moz-transform: translateX(0);
-			-ms-transform: translateX(0);
-			-o-transform: translateX(0);
 			transform: translateX(0);
-			-webkit-animation: slideIn 0.15s backwards;
-			-moz-animation: slideIn 0.15s backwards;
 			animation: slideIn 0.15s backwards;
-			-webkit-transition: -webkit-transform 0.2s;
-			-moz-transition: -moz-transform 0.2s;
 			transition: transform 0.2s;
 			@media screen and (max-width: 1200px) {
 			background-color: rgba(133,176,125, 1);
@@ -303,10 +226,6 @@ img {
 		opacity: 1;
 	}
 	span {
-		-webkit-transform: translateX(-5px);
-		-moz-transform: translateX(-5px);
-		-ms-transform: translateX(-5px);
-		-o-transform: translateX(-5px);
 		transform: translateX(-5px);
 	}
 }
@@ -315,36 +234,26 @@ img {
 	&.nav-is-visible ul li {
 		&:first-of-type {
 			a::after, span {
-				-webkit-animation-delay: 0.05s;
-				-moz-animation-delay: 0.05s;
 				animation-delay: 0.05s;
 			}
 		}
 		&:nth-of-type(2) {
 			a::after, span {
-				-webkit-animation-delay: 0.1s;
-				-moz-animation-delay: 0.1s;
 				animation-delay: 0.1s;
 			}
 		}
 		&:nth-of-type(3) {
 			a::after, span {
-				-webkit-animation-delay: 0.15s;
-				-moz-animation-delay: 0.15s;
 				animation-delay: 0.15s;
 			}
 		}
 		&:nth-of-type(4) {
 			a::after, span {
-				-webkit-animation-delay: 0.2s;
-				-moz-animation-delay: 0.2s;
 				animation-delay: 0.2s;
 			}
 		}
 		&:nth-of-type(5) {
 			a::after, span {
-				-webkit-animation-delay: 0.25s;
-				-moz-animation-delay: 0.25s;
 				animation-delay: 0.25s;
 			}
 		}
@@ -354,23 +263,13 @@ img {
 		top: auto;
 		left: 50%;
 		right: auto;
-		-webkit-transform: translateX(-50%);
-		-moz-transform: translateX(-50%);
-		-ms-transform: translateX(-50%);
-		-o-transform: translateX(-50%);
 		transform: translateX(-50%);
 		width: 300px;
 		.stretchy-nav-bg {
 			left: 50%;
 			right: auto;
-			-webkit-transform: translateX(-50%);
-			-moz-transform: translateX(-50%);
-			-ms-transform: translateX(-50%);
-			-o-transform: translateX(-50%);
 			transform: translateX(-50%);
 			background-color: #8ac57f;
-			-webkit-transition: width 0.2s, box-shadow 0.2s;
-			-moz-transition: width 0.2s, box-shadow 0.2s;
 			transition: width 0.2s, box-shadow 0.2s;
 		}
 		&.nav-is-visible .stretchy-nav-bg {
@@ -380,28 +279,14 @@ img {
 		.cd-nav-trigger {
 			left: 50%;
 			right: auto;
-			-webkit-transform: translateX(-50%);
-			-moz-transform: translateX(-50%);
-			-ms-transform: translateX(-50%);
-			-o-transform: translateX(-50%);
 			transform: translateX(-50%);
 			background-color: #9acd91;
 			span {
 				background-color: transparent;
 				&::before {
-					/* used to create the plus icon */
-					-webkit-transform: rotate(90deg);
-					-moz-transform: rotate(90deg);
-					-ms-transform: rotate(90deg);
-					-o-transform: rotate(90deg);
 					transform: rotate(90deg);
 				}
 				&::after {
-					/* used to create the plus icon */
-					-webkit-transform: rotate(0deg);
-					-moz-transform: rotate(0deg);
-					-ms-transform: rotate(0deg);
-					-o-transform: rotate(0deg);
 					transform: rotate(0deg);
 				}
 			}
@@ -410,17 +295,9 @@ img {
 			box-shadow: 0 4px 30px rgba(0, 0, 0, 0.2);
 			span {
 				&::before {
-					-webkit-transform: rotate(-135deg);
-					-moz-transform: rotate(-135deg);
-					-ms-transform: rotate(-135deg);
-					-o-transform: rotate(-135deg);
 					transform: rotate(-135deg);
 				}
 				&::after {
-					-webkit-transform: rotate(-225deg);
-					-moz-transform: rotate(-225deg);
-					-ms-transform: rotate(-225deg);
-					-o-transform: rotate(-225deg);
 					transform: rotate(-225deg);
 				}
 			}
@@ -437,7 +314,6 @@ img {
 				float: left;
 				width: 60px;
 				&:nth-of-type(2) {
-					/* space occupied by the navigation trigger */
 					margin-right: 60px;
 				}
 			}
@@ -449,10 +325,6 @@ img {
 					top: 50%;
 					left: 22px;
 					right: auto;
-					-webkit-transform: translateY(-50%) scale(0);
-					-moz-transform: translateY(-50%) scale(0);
-					-ms-transform: translateY(-50%) scale(0);
-					-o-transform: translateY(-50%) scale(0);
 					transform: translateY(-50%) scale(0);
 					background-image: url(../img/cd-sprite-2.svg);
 				}
@@ -471,25 +343,15 @@ img {
 					background-position: -32px 0px;
 				}
 				&:first-of-type a::after, &:nth-of-type(4) a::after {
-					-webkit-animation-delay: 0.2s;
-					-moz-animation-delay: 0.2s;
 					animation-delay: 0.2s;
 				}
 				&:nth-of-type(2) a::after, &:nth-of-type(3) a::after {
-					-webkit-animation-delay: 0.1s;
-					-moz-animation-delay: 0.1s;
 					animation-delay: 0.1s;
 				}
 			}
 		}
 		&.nav-is-visible ul a::after {
-			-webkit-animation-name: scaleIn;
-			-moz-animation-name: scaleIn;
 			animation-name: scaleIn;
-			-webkit-transform: translateY(-50%) scale(1);
-			-moz-transform: translateY(-50%) scale(1);
-			-ms-transform: translateY(-50%) scale(1);
-			-o-transform: translateY(-50%) scale(1);
 			transform: translateY(-50%) scale(1);
 		}
 		ul span {
@@ -506,26 +368,14 @@ img {
 			line-height: 1;
 			white-space: nowrap;
 			text-align: center;
-			-webkit-transition: opacity 0.2s, visibility 0.2s;
-			-moz-transition: opacity 0.2s, visibility 0.2s;
 			transition: opacity 0.2s, visibility 0.2s;
-			/* reset default style */
-			-webkit-transform: translateX(0);
-			-moz-transform: translateX(0);
-			-ms-transform: translateX(0);
-			-o-transform: translateX(0);
 			transform: translateX(0);
 			&::after {
-				/* triangle below the tooltip */
 				content: '';
 				position: absolute;
 				top: 100%;
 				left: 50%;
 				right: auto;
-				-webkit-transform: translateX(-50%);
-				-moz-transform: translateX(-50%);
-				-ms-transform: translateX(-50%);
-				-o-transform: translateX(-50%);
 				transform: translateX(-50%);
 				height: 0;
 				width: 0;
@@ -534,9 +384,6 @@ img {
 			}
 		}
 		&.nav-is-visible ul span {
-			/* reset default style */
-			-webkit-animation: none;
-			-moz-animation: none;
 			animation: none;
 		}
 	}
@@ -558,56 +405,24 @@ img {
 }
 
 // Keyframes
-@-webkit-keyframes scaleIn {
-	from {
-		-webkit-transform: translateY(-50%) scale(0);
-	}
-
-	to {
-		-webkit-transform: translateY(-50%) scale(1);
-	}
-}
-
-
-@-moz-keyframes scaleIn {
-	from {
-		-moz-transform: translateY(-50%) scale(0);
-	}
-
-	to {
-		-moz-transform: translateY(-50%) scale(1);
-	}
-}
-
 
 @keyframes scaleIn {
 	from {
-		-webkit-transform: translateY(-50%) scale(0);
-		-moz-transform: translateY(-50%) scale(0);
-		-ms-transform: translateY(-50%) scale(0);
-		-o-transform: translateY(-50%) scale(0);
 		transform: translateY(-50%) scale(0);
 	}
 
 	to {
-		-webkit-transform: translateY(-50%) scale(1);
-		-moz-transform: translateY(-50%) scale(1);
-		-ms-transform: translateY(-50%) scale(1);
-		-o-transform: translateY(-50%) scale(1);
 		transform: translateY(-50%) scale(1);
 	}
 }
 
-
 @-webkit-keyframes slideIn {
 	from {
 		opacity: 0;
-		-webkit-transform: translateX(-25px);
 	}
 
 	to {
 		opacity: 1;
-		-webkit-transform: translateX(0);
 	}
 }
 
@@ -615,12 +430,10 @@ img {
 @-moz-keyframes slideIn {
 	from {
 		opacity: 0;
-		-moz-transform: translateX(-25px);
 	}
 
 	to {
 		opacity: 1;
-		-moz-transform: translateX(0);
 	}
 }
 
@@ -628,19 +441,11 @@ img {
 @keyframes slideIn {
 	from {
 		opacity: 0;
-		-webkit-transform: translateX(-25px);
-		-moz-transform: translateX(-25px);
-		-ms-transform: translateX(-25px);
-		-o-transform: translateX(-25px);
 		transform: translateX(-25px);
 	}
 
 	to {
 		opacity: 1;
-		-webkit-transform: translateX(0);
-		-moz-transform: translateX(0);
-		-ms-transform: translateX(0);
-		-o-transform: translateX(0);
 		transform: translateX(0);
 	}
 }
@@ -717,7 +522,7 @@ img {
 			margin-top: 5px;
 		}
 		font-size: 14px;
-	}	
+	}
 	@media screen and (min-width: 1px) and (max-width: 1000px) {
 		img {
 			margin: 5px 10px;
@@ -898,5 +703,17 @@ background: url(../img/icons/eye-close.svg) no-repeat;
 @media screen and (max-width: 800px) {
 	.modal-content {
 		width: 300px;
+	}
+}
+
+@keyframes shake-with-delay {
+	from, 16%, to {
+		transform: translate3d(0, 0, 0);
+	}
+	1.6%, 4.8%, 8%, 11.2%, 14.4% {
+		transform: translate3d(0, -2px, 0);
+	}
+	3.2%, 6.4%, 9.6%, 12.8% {
+		transform: translate3d(0, 2px, 0);
 	}
 }
